# file-organiser

./: Makefile  pyproject.toml
scripts/: clean.py
src/: extensions.py  file_organiser.py
src/file_organiser/core/: categoriser.py  models.py  mover.py  organiser.py  validators.py
src/file_organiser/data/: default_extensions.json  default_extensions.py
src/file_organiser/plugins/: registry.py
src/file_organiser/plugins/builtin/: __init_.py  extension.py  magic.py  mime.py  reporters.py
src/file_organiser/utils/: filesystem.py  logging.py
src/plugins/: base.py  registry.py
tests/: test_core.py
